WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116588
REGRESSION(
r150491
): WebKit2.CloseThenTerminate asserting below WebContext::disconnectProcess().
https://bugs.webkit.org/show_bug.cgi?id=116588
Summary
REGRESSION(r150491): WebKit2.CloseThenTerminate asserting below WebContext::d...
Andreas Kling
Reported
2013-05-21 21:50:32 PDT
<
http://trac.webkit.org/changeset/150491
> broke the WebKit2.CloseThenTerminate API test.
Attachments
Pätch
(1.28 KB, patch)
2013-05-21 21:53 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(524.80 KB, application/zip)
2013-05-21 22:38 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-05-21 21:53:11 PDT
Created
attachment 202493
[details]
Pätch
Build Bot
Comment 2
2013-05-21 22:38:13 PDT
Comment on
attachment 202493
[details]
Pätch
Attachment 202493
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/538052
New failing tests: editing/style/5065910.html
Build Bot
Comment 3
2013-05-21 22:38:15 PDT
Created
attachment 202499
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
WebKit Commit Bot
Comment 4
2013-05-21 22:49:31 PDT
Comment on
attachment 202493
[details]
Pätch Clearing flags on attachment: 202493 Committed
r150500
: <
http://trac.webkit.org/changeset/150500
>
WebKit Commit Bot
Comment 5
2013-05-21 22:49:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug