REGRESSION(r150491): WebKit2.CloseThenTerminate asserting below WebContext::disconnectProcess(). <http://webkit.org/b/116588>

Reviewed by Sam Weinig.

Do an early return from WebProcessProxy::requestTermination() if there is no child process
connection to terminate.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::requestTermination):


Canonical link: https://commits.webkit.org/134901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150500 268f45cc-cd09-0410-ab3c-d52691b4dbfc